<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ProgressBar
        android:id="@+id/tv_progressbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminateTint="@color/red"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:backgroundTint="@color/red" />
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tv"
        android:layout_gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
  
</RelativeLayout>